# django-littlelemon

./: .gitignore  README.md  pyproject.toml
littlelemon/restaurant/: models.py  urls.py  views.py
littlelemon/restaurant/migrations/: 0001_initial.py  0002_menu_description.py
littlelemon/restaurant/templates/: menu.html  menu_item.html
