[project]
name = "littlelemon"
version = "0.1.0"
description = "Dynamic Restaurant app built with Django"
authors = [
    { name = "Parveen Kashyap", email = "er.parveen44@example.com" }
]
keywords = ["django", "restaurant", "booking", "menu"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.5",
]
